--- a/public/index.html
+++ b/public/index.html
@@ -46,14 +46,14 @@
             </label>
 
             <label for="password">
-                <span>Senha</span>
+                <span>Password</span>
                 <input id="password" placeholder="Senha:" type="password" value="" name="password">
             </label>
 
-            <button type="submit">Entrar</button>
+            <button type="submit">Login</button>
         </form>
 
-        <a href="forgot-password.html">Esqueceu a senha?</a>
+        <a href="forgot-password.html">Forgot password?</a>
 
      
     </section>
