--- a/src/Challenges/challenge-01.html
+++ b/src/Challenges/challenge-01.html
@@ -14,3 +14,24 @@
     ##########################################################################
 
     <! - Termine de copiar aqui ->
+
+
+      <! - Começe copiando daqui ->
+        ##########################################################################
+        <h3>Filmes</h3>
+        <h4>Qual seu filme Preferido e por que ?</h4>
+        <p>Resposta:</p>
+
+        Eu gosto de filmes de terror pq me dão uma ideia de como as situações de risco de vida podem acontecer, fazendo com que se sinta mais capaz de enfrentar o perigo real.
+        uma lista dos filmes que curto
+        O Despertar dos Mortos (1978) ...
+        O Massacre da Serra Elétrica (1974) ...
+        A Noite dos Mortos-Vivos (1968) ...
+        Abismo do Medo (2005) ...
+        O Bebê de Rosemary (1968)
+        Guerra Mundial Z (2013) ...
+        O Poço (2019) Disponível em: Netflix. ...
+        Mãe! (2017)
+        ##########################################################################
+
+        <! - Termine de copiar aqui ->
