--- a/src/Challenges/challenge-02.html
+++ b/src/Challenges/challenge-02.html
@@ -14,3 +14,21 @@
     ##########################################################################
 
     <! - Termine de copiar aqui ->
+
+      <! - Começe copiando daqui ->
+        ##########################################################################
+        <h3>Hobbies</h3>
+        <h4>Qual seu hobbie preferido?</h4>
+        <p>Resposta:</p>
+
+        Gosto de jogos em geral principlamente de tiros segue lista
+        Counter-Strike. ...
+        Call of Duty. ...
+        Battlefield. ...
+        Valorant. ...
+        Rainbow Six Siege. ...
+        Halo. ...
+        Destiny.
+        ##########################################################################
+
+        <! - Termine de copiar aqui ->
