--- a/src/Challenges/challenge-03.html
+++ b/src/Challenges/challenge-03.html
@@ -14,3 +14,21 @@
     ##########################################################################
 
     <! - Termine de copiar aqui ->
+
+      <! - Começe copiando daqui ->
+        ##########################################################################
+        <h3>Music</h3>
+        <h4>Qual seu genero de banda Preferido ? deixe algumas recomendações</h4>
+        <p>Resposta:</p>
+
+        Gosto de tudo especialmente de metal segue uma lista de banda que eu curto
+        Iron Maiden. ...
+        Judas Priest. ...
+        Sepultura. ...
+        Metallica. ...
+        Slayer. ...
+        Slipknot. ...
+        Motörhead.
+        ##########################################################################
+
+        <! - Termine de copiar aqui ->
