--- a/src/Challenges/challenge-01.html
+++ b/src/Challenges/challenge-01.html
@@ -2,36 +2,18 @@
 
 //Não esqueça de criar uma nova branch para o desafio 01
 
-<! – Copie o bloco de codigo e responda as perguntas! NÃO MODIFIQUE BLOCOS DE CODIGOS JÁ EXISTENTES –>.
+<! – Copie o bloco de código e responda as perguntas! NÃO MODIFIQUE BLOCOS DE CODIGOS JÁ EXISTENTES –>.
 
-  <! - Começe copiando daqui ->
+  <! - Comece copiando daqui ->
     ##########################################################################
     <h3>Filmes</h3>
     <h4>Qual seu filme Preferido e por que ?</h4>
     <p>Resposta:</p>
-
-    RESPONDA AQUI Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla blandit nisl eget magna finibus, ac vulputate nulla sollicitudin. Nulla vitae urna nulla. Quisque sollicitudin eros a lacus egestas, id malesuada lectus maximus. Curabitur et elit pellentesque, dictum augue ac, ultricies tortor. Donec pellentesque, dui eget eleifend luctus, enim erat sagittis lectus, eu porttitor arcu urna vitae elit. Pellentesque justo quam, sodales et est sit amet, efficitur feugiat sem. Donec vulputate aliquet lorem at volutpat. Aenean tristique justo mi, non pretium orci vestibulum lacinia.
-    ##########################################################################
+    <ul>
+      <li>Forrest Gump, simplesmente genial, mas subestimado.</li>
+      <li>Era uma vez na America, longo, violento, mas tocante, com um final fantástico..</li>
+      <li>O resgate do soldado Ryan, pela cena inicial, por alguns diálogos e, para mim, pela espetacular cena do soldado problemático travado na escada enquanto a luta de vida ou morte acontecia logo ali, no andar de cima. Épica..</li>
+      <li>O show de Truman, porque o achei muito original na época. Muito subestimado, na minha opinião.</li>
+    </ul>
 
     <! - Termine de copiar aqui ->
-
-
-      <! - Começe copiando daqui ->
-        ##########################################################################
-        <h3>Filmes</h3>
-        <h4>Qual seu filme Preferido e por que ?</h4>
-        <p>Resposta:</p>
-
-        Eu gosto de filmes de terror pq me dão uma ideia de como as situações de risco de vida podem acontecer, fazendo com que se sinta mais capaz de enfrentar o perigo real.
-        uma lista dos filmes que curto
-        O Despertar dos Mortos (1978) ...
-        O Massacre da Serra Elétrica (1974) ...
-        A Noite dos Mortos-Vivos (1968) ...
-        Abismo do Medo (2005) ...
-        O Bebê de Rosemary (1968)
-        Guerra Mundial Z (2013) ...
-        O Poço (2019) Disponível em: Netflix. ...
-        Mãe! (2017)
-        ##########################################################################
-
-        <! - Termine de copiar aqui ->
