--- a/src/Challenges/challenge-02.html
+++ b/src/Challenges/challenge-02.html
@@ -9,26 +9,10 @@
     <h3>Hobbies</h3>
     <h4>Qual seu hobbie preferido?</h4>
     <p>Resposta:</p>
-
-    RESPONDA AQUI Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla blandit nisl eget magna finibus, ac vulputate nulla sollicitudin. Nulla vitae urna nulla. Quisque sollicitudin eros a lacus egestas, id malesuada lectus maximus. Curabitur et elit pellentesque, dictum augue ac, ultricies tortor. Donec pellentesque, dui eget eleifend luctus, enim erat sagittis lectus, eu porttitor arcu urna vitae elit. Pellentesque justo quam, sodales et est sit amet, efficitur feugiat sem. Donec vulputate aliquet lorem at volutpat. Aenean tristique justo mi, non pretium orci vestibulum lacinia.
-    ##########################################################################
-
+    <p>Gosto de tudo um pouco, mas os principais são:</p>
+    <ul>
+      <li>Jogos em geral (pique gamer mesmo xD)</li>
+      <li>Estudar sobre Hardware</li>
+      <li>Estudar música</li>
+    </ul>
     <! - Termine de copiar aqui ->
-
-      <! - Começe copiando daqui ->
-        ##########################################################################
-        <h3>Hobbies</h3>
-        <h4>Qual seu hobbie preferido?</h4>
-        <p>Resposta:</p>
-
-        Gosto de jogos em geral principlamente de tiros segue lista
-        Counter-Strike. ...
-        Call of Duty. ...
-        Battlefield. ...
-        Valorant. ...
-        Rainbow Six Siege. ...
-        Halo. ...
-        Destiny.
-        ##########################################################################
-
-        <! - Termine de copiar aqui ->
