--- a/src/Challenges/challenge-03.html
+++ b/src/Challenges/challenge-03.html
@@ -9,26 +9,5 @@
     <h3>Music</h3>
     <h4>Qual seu genero de banda Preferido ? deixe algumas recomendações</h4>
     <p>Resposta:</p>
-
-    RESPONDA AQUI Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla blandit nisl eget magna finibus, ac vulputate nulla sollicitudin. Nulla vitae urna nulla. Quisque sollicitudin eros a lacus egestas, id malesuada lectus maximus. Curabitur et elit pellentesque, dictum augue ac, ultricies tortor. Donec pellentesque, dui eget eleifend luctus, enim erat sagittis lectus, eu porttitor arcu urna vitae elit. Pellentesque justo quam, sodales et est sit amet, efficitur feugiat sem. Donec vulputate aliquet lorem at volutpat. Aenean tristique justo mi, non pretium orci vestibulum lacinia.
-    ##########################################################################
-
+    <p>O gênero que mais ouço é eletrônica. Mas sou uma caixinha de jukebox ambulante kkkk. Um dia tu me pega ouvindo Musica classica, no outro estou ouvindo Trap.</p>
     <! - Termine de copiar aqui ->
-
-      <! - Começe copiando daqui ->
-        ##########################################################################
-        <h3>Music</h3>
-        <h4>Qual seu genero de banda Preferido ? deixe algumas recomendações</h4>
-        <p>Resposta:</p>
-
-        Gosto de tudo especialmente de metal segue uma lista de banda que eu curto
-        Iron Maiden. ...
-        Judas Priest. ...
-        Sepultura. ...
-        Metallica. ...
-        Slayer. ...
-        Slipknot. ...
-        Motörhead.
-        ##########################################################################
-
-        <! - Termine de copiar aqui ->
