feat: fix:organizando challenges que estavam fora de ordem

--- a/src/Challenges/challenge-01.html
+++ b/src/Challenges/challenge-01.html
@@ -2,6 +2,8 @@
 
 //Não esqueça de criar uma nova branch para o desafio 01
 
+ATENÇÃO NÃO APAGUE CODIGO DOS AMIGUINHOS AQUI JÁ EXISTENTES
+
 <! – Copie o bloco de código e responda as perguntas! NÃO MODIFIQUE BLOCOS DE CODIGOS JÁ EXISTENTES –>.
 
   <! - Comece copiando daqui ->
@@ -17,3 +19,21 @@
     </ul>
 
     <! - Termine de copiar aqui ->
+
+
+      <! - Comece copiando daqui ->
+        ##########################################################################
+        <h3>Filmes</h3>
+        <h4>Qual seu filme Preferido e por que ?</h4>
+        <p>Resposta:</p>
+        Gosto de filmes de terror
+        O Despertar dos Mortos (1978) ...
+        O Massacre da Serra Elétrica (1974) ...
+        A Noite dos Mortos-Vivos (1968) ...
+        Abismo do Medo (2005) ...
+        O Bebê de Rosemary (1968)
+        Guerra Mundial Z (2013) ...
+        O Poço (2019) Disponível em: Netflix. ...
+        Mãe! (2017)
+
+        <! - Termine de copiar aqui ->
