--- a/src/Challenges/challenge-02.html
+++ b/src/Challenges/challenge-02.html
@@ -1,6 +1,7 @@
 <h1>Seja bem vindo ao challenge 02</h1>
 
 //Não esqueça de criar uma nova branch para o desafio 02
+ATENÇÃO NÃO APAGUE CODIGO DOS AMIGUINHOS AQUI JÁ EXISTENTES
 
 <! – Copie o bloco de codigo e responda as perguntas! NÃO MODIFIQUE BLOCOS DE CODIGOS JÁ EXISTENTES –>.
 
@@ -16,3 +17,16 @@
       <li>Estudar música</li>
     </ul>
     <! - Termine de copiar aqui ->
+
+      <! - Começe copiando daqui ->
+        ##########################################################################
+        <h3>Hobbies</h3>
+        <h4>Qual seu hobbie preferido?</h4>
+        <p>Resposta:</p>
+        <p>Gosto de esportes em geral</p>
+        <ul>
+          <li>Futebol</li>
+          <li>Games</li>
+          <li>Volei</li>
+        </ul>
+        <! - Termine de copiar aqui ->
