--- a/src/Challenges/challenge-03.html
+++ b/src/Challenges/challenge-03.html
@@ -1,6 +1,7 @@
 <h1>Seja bem vindo ao challenge 03</h1>
 
 //Não esqueça de criar uma nova branch para o desafio 03
+ATENÇÃO NÃO APAGUE CODIGO DOS AMIGUINHOS AQUI JÁ EXISTENTES
 
 <! – Copie o bloco de codigo e responda as perguntas! NÃO MODIFIQUE BLOCOS DE CODIGOS JÁ EXISTENTES sujeito a negação de pr –>.
 
@@ -11,3 +12,15 @@
     <p>Resposta:</p>
     <p>O gênero que mais ouço é eletrônica. Mas sou uma caixinha de jukebox ambulante kkkk. Um dia tu me pega ouvindo Musica classica, no outro estou ouvindo Trap.</p>
     <! - Termine de copiar aqui ->
+
+      <! - Começe copiando daqui ->
+        ##########################################################################
+        <h3>Music</h3>
+        <h4>Qual seu genero de banda Preferido ? deixe algumas recomendações</h4>
+        <p>Resposta: Funk</p>
+        <p>Como uma boa carioca adoro escutar funk</p>
+        <p>L7NON</p>
+        <p>mc pozé</p>
+        <p>mc cabelinho</p>
+        <p>felipe ret</p>
+        <! - Termine de copiar aqui ->
