--- a/src/Challenges/challenge-01.html
+++ b/src/Challenges/challenge-01.html
@@ -14,7 +14,9 @@ ATENÇÃO NÃO APAGUE CODIGO DOS AMIGUINHOS AQUI JÁ EXISTENTES
     <ul>
       <li>Forrest Gump, simplesmente genial, mas subestimado.</li>
       <li>Era uma vez na America, longo, violento, mas tocante, com um final fantástico..</li>
-      <li>O resgate do soldado Ryan, pela cena inicial, por alguns diálogos e, para mim, pela espetacular cena do soldado problemático travado na escada enquanto a luta de vida ou morte acontecia logo ali, no andar de cima. Épica..</li>
+      <li>O resgate do soldado Ryan, pela cena inicial, por alguns diálogos e, para mim, pela espetacular cena do
+        soldado problemático travado na escada enquanto a luta de vida ou morte acontecia logo ali, no andar de cima.
+        Épica..</li>
       <li>O show de Truman, porque o achei muito original na época. Muito subestimado, na minha opinião.</li>
     </ul>
 
@@ -37,3 +39,15 @@ ATENÇÃO NÃO APAGUE CODIGO DOS AMIGUINHOS AQUI JÁ EXISTENTES
         Mãe! (2017)
 
         <! - Termine de copiar aqui ->
+
+
+          <! - Comece copiando daqui ->
+            ##########################################################################
+            <h3>Filmes</h3>
+            <h4>Qual seu filme Preferido e por que ?</h4>
+            <p>Resposta:</p>
+            Gosto de filmes de comédia e comédia romântica
+            Gosto dos filmes de natal da Netflix
+            Meu filme favorito e que me faz pensar bastante é "Milagres do Paraíso"
+
+            <! - Termine de copiar aqui ->
