--- a/src/Challenges/challenge-02.html
+++ b/src/Challenges/challenge-02.html
@@ -30,3 +30,17 @@ ATENÇÃO NÃO APAGUE CODIGO DOS AMIGUINHOS AQUI JÁ EXISTENTES
           <li>Volei</li>
         </ul>
         <! - Termine de copiar aqui ->
+
+          <! - Começe copiando daqui ->
+            ##########################################################################
+            <h3>Hobbies</h3>
+            <h4>Qual seu hobbie preferido?</h4>
+            <p>Resposta:</p>
+            <p>Gosto de tudo um pouco, mas os principais são:</p>
+            <ul>
+              <li>Ler (principalmente livros de romance ou que a sinopse me prenda)</li>
+              <li>Ir para academia</li>
+              <li>Escutar música</li>
+              <li>Fazer caminhada para espairecer</li>
+            </ul>
+            <! - Termine de copiar aqui ->
