--- a/src/Challenges/challenge-01.html
+++ b/src/Challenges/challenge-01.html
@@ -18,7 +18,6 @@ ATENÇÃO NÃO APAGUE CODIGO DOS AMIGUINHOS AQUI JÁ EXISTENTES
         soldado problemático travado na escada enquanto a luta de vida ou morte acontecia logo ali, no andar de cima.
         Épica..</li>
       <li>O show de Truman, porque o achei muito original na época. Muito subestimado, na minha opinião.</li>
-      <li>Ela, pois acho a fotografia do filme muito bonitinha e a história de um homem se apaixonando por um sistema muito legal.</li>
     </ul>
 
     <! - Termine de copiar aqui ->
@@ -52,3 +51,13 @@ ATENÇÃO NÃO APAGUE CODIGO DOS AMIGUINHOS AQUI JÁ EXISTENTES
             Meu filme favorito e que me faz pensar bastante é "Milagres do Paraíso"
 
             <! - Termine de copiar aqui ->
+
+            <! - Comece copiando daqui ->
+            ##########################################################################
+            <h3>Filmes</h3>
+            <h4>Qual seu filme Preferido e por que ?</h4>
+            <p>Resposta:</p>
+            <li>Ela, pois acho a fotografia do filme muito bonitinha e a história de um homem se apaixonando por um sistema muito legal.</li>
+
+            <! - Termine de copiar aqui ->
+
