--- a/src/Challenges/challenge-02.html
+++ b/src/Challenges/challenge-02.html
@@ -44,3 +44,17 @@ ATENÇÃO NÃO APAGUE CODIGO DOS AMIGUINHOS AQUI JÁ EXISTENTES
               <li>Fazer caminhada para espairecer</li>
             </ul>
             <! - Termine de copiar aqui ->
+
+            <! - Começe copiando daqui ->
+            ##########################################################################
+            <h3>Hobbies</h3>
+            <h4>Qual seu hobbie preferido?</h4>
+            <p>Resposta:</p>
+            <p>Gosto de tudo um pouco, mas os principais são:</p>
+            <ul>
+              <li>Praticar atividades físicas</li>
+              <li>Preparar as marmitas da semana</li>
+              <li>Estudar Desenvolvimento Mobile e Gestão de Produtos</li>
+              <li>Ler livros de áreas de conhecimento variadas</li>
+            </ul>
+            <! - Termine de copiar aqui ->
