--- a/src/Challenges/challenge-03.html
+++ b/src/Challenges/challenge-03.html
@@ -41,3 +41,11 @@ ATENÇÃO NÃO APAGUE CODIGO DOS AMIGUINHOS AQUI JÁ EXISTENTES
               Calvin Harris, Twenty one Pilots.
             </p>
             <! - Termine de copiar aqui ->
+
+            <! - Começe copiando daqui ->
+            ##########################################################################
+            <h3>Music</h3>
+            <h4>Qual seu genero de banda Preferido ? deixe algumas recomendações</h4>
+            <p>Resposta: Rock, Metal</p>
+            <p>Bring Me The Horizon, Beartooth, Bullet For My Valentine, Our Last Night</p>
+            <! - Termine de copiar aqui ->
